ipc/ipdl/test/ipdl/error/ExtendedAttrEmpty.ipdlh
//error: bad syntax near `]'

[ ] using SomeType from "SomeFile.h";

struct ExtendedAttrEmpty {};
